Fixed Scrollbar issue for navmenu using pandora css and jquery files

--- a/css/main.css
+++ b/css/main.css
@@ -11,3 +11,24 @@ body{
   padding-top: 52px;
   background-color: #ECF0F5;
 }
+
+.navview-pane ::-webkit-scrollbar-track {
+  background-color: #4b646f !important;
+}
+
+.navview-pane * {
+  scrollbar-color: #1ba1e2 #4b646f !important;
+}
+
+@media all and (min-width: 640px) {
+  .master {
+    width: 500px;
+    padding: 5px 10px 0;
+  }
+}
+@media all and (min-width: 768px) {
+  .master {
+    width: 650px;
+    padding: 5px 80px 0;
+  }
+}
